BlockingQueue implementation